--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,22 +5,22 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
 
 // Our variables
-// $base-font-family: "Open Sans", sans-serif;
 $base-font-family: 'Open Sans', sans-serif;
 $base-font-size:   16px;
-$base-font-weight: 300;
+$base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.95;
 $base-line-height: 1.5;
 
-$alt-font-family: 'Open Sans', sans-serif;
+$alt-font-family: 'Libre Baskerville', sans-serif;
 $alt-font-weight: 400;
 
 $spacing-unit:     50px;
 
-$text-color:       #111 !default;
-$background-color: #ffffff !default;
+$text-color:       RGB(38, 25, 17) !default;
+$background-color: RGB(249, 246, 239) !default;
 $brand-color:      #B30000 !default;
 
 $grey-color:       #3F3F3F;
