--- a/_sass/customstyles.scss
+++ b/_sass/customstyles.scss
@@ -2,10 +2,20 @@ h1, h2, h3 { margin-top: 0px; margin-bottom: 10px; }
 p { margin-top: 0px; margin-bottom: 10px; font-size: 1.05rem; line-height: 1.5rem }
 
 .wrapper { max-width: -webkit-calc(850px - (50px * 2)); max-width: calc(850px - (50px * 2)) }
-@media screen and (max-width: 850px) { .wrapper { max-width: -webkit-calc(850px - (50px)); max-width: calc(850px - (50px)) } }
+
+@media screen and (max-width: 850px) { 
+    .wrapper { max-width: -webkit-calc(850px - (50px)); max-width: calc(850px - (50px)) } 
+    .site-header { min-height: 100px; }
+}
+
 
 .site-footer { font-size: 1rem; line-height: 1.6rem; border-top: 0px; }
 .site-footer .bottom { color: #bfbfbf; width: 100%; clear: both; float: none; text-align: center; margin-top: 50px; margin-bottom: 50px; }
+
+@media screen and (max-width: 850px) { 
+    .wrapper { max-width: -webkit-calc(850px - (50px)); max-width: calc(850px - (50px)); }
+    .site-header {min-height: 60px;} 
+}
 
 .contact-list { margin-top: 20px; margin-bottom: -10px; }
 .about-col-1 .user-picture { margin-bottom: 0px; }
