--- a/_includes/nav_menu.html
+++ b/_includes/nav_menu.html
@@ -1,15 +1,15 @@
 {% assign plang = page.lang | default: site.langs[0] | default: "en" %}
 {% assign nblangs = site.langs | size %}
 
-<ul class="nav-list {{ include.class }}">
+<!-- <ul class="nav-list {{ include.class }}"> -->
 
 {% assign pages = site.pages %}
 
 {% for my_page in pages %}
 {% unless my_page.invisible %}
   {% if my_page.title %}
-  <li><a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a></li>
+  <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
   {% endif %}
 {% endunless %}
 {% endfor %}
-</ul>
+<!-- </ul> -->
