--- a/_includes/_icons/github.html
+++ b/_includes/_icons/github.html
@@ -1,1 +1,6 @@
-<a target="_blank" href="{{ include.link }}" title="Github"><span class="icon icon--github">{% include _icons/github.svg %}</span><span class="username">GitHub</span></a>
+<a target="_blank" href="{{ include.link }}" title="Github">
+    <span class="icon icon--github">
+        {% include _icons/github.svg %}
+    </span>
+    <span class="username">GitHub</span>
+</a>
