--- a/_includes/_icons/linkedin.html
+++ b/_includes/_icons/linkedin.html
@@ -1,1 +1,6 @@
-<a target="_blank" href="{{ include.link }}" title="Linkedin"><span class="icon icon--linkedin">{% include _icons/linkedin.svg %}</span><span class="username">LinkedIn</span></a>
+<a target="_blank" href="{{ include.link }}" title="Linkedin">
+    <span class="icon icon--linkedin">
+        {% include _icons/linkedin.svg %}
+    </span>
+    <span class="username">LinkedIn</span>
+</a>
