--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,17 @@
 <header class="site-header" role="banner">
-
-    <div class="wrapper">
-  
-      <div class="site-header-float">
-      <!-- {% include _i18n/sitetitle.html class=true %} -->
-
+  <div class="wrapper">
+    <div class="site-header-float">
       <nav class="site-nav">
-          {% include nav_menu.html %}
+      
+        {% for my_page in site.pages %}
+          {% unless my_page.invisible %}
+            {% if my_page.title %}
+              <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+            {% endif %}
+          {% endunless %}
+        {% endfor %}
+      
       </nav>
-
-      </div>
-  
     </div>
-  
-  </header>
+  </div>
+</header>
