--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,105 +1,191 @@
-/**
- * Reset some basic elements
- */
- body, h1, h2, h3, h4, h5, h6,
- p, blockquote, pre, hr,
- dl, dd, ol, ul, figure {
+body, 
+h1, 
+h2, 
+h3, 
+h4, 
+h5, 
+h6,
+p,
+ol, 
+ul, 
+figure {
   margin-top: 0px; 
   margin-bottom: 15px;
   margin-left: 0px;
   margin-right: 0px;
   padding: 0;
- }
+}
 
+h1 { 
+  font-size: 30pt; 
+  font-weight: 400
+}
 
+p { 
+  font-size: $base-font-size; 
+  line-height: 18pt 
+}
 
-h1 { font-size: 30pt; font-weight: 400; margin-bottom: 20px}
-p { font-size: $base-font-size; line-height: 18pt }
+body {
+  font-family: $base-font-family;
+  font-size: $base-font-size;
+  font-weight: $base-font-weight;
+  color: $text-color;
+}
 
-.site-footer { font-size: 1rem; line-height: 1.6rem; border-top: 0px; }
-.site-footer .bottom { color: $grey-color-lighter; width: 100%; clear: both; float: none; text-align: center; margin-top: 50px; margin-bottom: 50px; }
-.site-footer .bottom a { color: $grey-color-lighter; &:hover {color: $grey-color-light; text-decoration: none; }}
-
- /**
-  * Basic styling
-  */
- body {
-   font-family: $base-font-family;
-   @include size(p);
-   font-weight: $base-font-weight;
-   color: $text-color;
-   background-color: $background-color;
- }
+ul, 
+ol {
+  margin-left: 0.5 * $spacing-unit;
+}
  
- /**
-  * Lists
-  */
- ul, ol {
-   margin-left: 0.5 * $spacing-unit;
- }
+a {
+  color: $brand-color;
+  text-decoration: none; 
+  &:hover {
+    color: $brand-color-dark;
+    text-decoration: none;
+  }
+}
+
+%clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.wrapper {
+
+  max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
+  max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: $spacing-unit;
+  padding-left: $spacing-unit;
+
+  @extend %clearfix;
  
- li {
-   > ul,
-   > ol {
-     margin-bottom: 0;
-   }
- }
- 
- /**
-  * Links
-  */
- a {
+  @include media-query($on-laptop) {
+    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
+    max-width:         calc(#{$content-width} - (#{$spacing-unit}));
+    padding-right: $spacing-unit;
+    padding-left: $spacing-unit;
+  }
+
+}
+
+.site-nav {
   
-   color: $brand-color;
-   text-decoration: none;
- 
-   &:hover {
-     color: $text-color;
-     text-decoration: none;
-   }
+  float: left;
+  z-index: 1000;
+  margin-top: 20px;
+  margin-bottom: 20px;
 
- }
- 
- 
- 
- /**
-  * Clearfix
-  */
- %clearfix:after {
-   content: "";
-   display: table;
-   clear: both;
- }
- /**
-  * Wrapper
-  */
- .wrapper {
-   max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-   max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
-   margin-right: auto;
-   margin-left: auto;
-   padding-right: $spacing-unit;
-   padding-left: $spacing-unit;
-   @extend %clearfix;
- 
-   @include media-query($on-laptop) {
-     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-     max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-     padding-right: $spacing-unit;
-     padding-left: $spacing-unit;
-   }
- }
- 
- 
+  .page-link {
+    font-size: 10pt; 
+    margin-right: 10pt;
+    color: $grey-color-light;
+    &:hover {
+        color: $grey-color;
+        text-decoration: none;
+    }
+  }
+
+}
+
+.page-content {
+  padding: $spacing-unit 0 $spacing-unit 0;
+}
+
+.post-content {
+  padding-bottom: $spacing-unit;
+}
+
+.page-heading {
+  margin-top: 0;
+}
+
+.about-col-wrapper {
+  @extend %clearfix;
+}
+
+.about-col {
+  float: left;
+}
+
+.about-col-1 {
+
+  padding-right: $spacing-unit / 2;
+  width: -webkit-calc(35% - (#{$spacing-unit} / 4));
+  width:         calc(35% - (#{$spacing-unit} / 4));
+
+  ul {
+    font-size: 14px;
+    list-style: none;
+    margin: 0;
+    li {
+      margin-bottom: 5px
+    }
+  }
+
+  .user-picture {
+    border-radius: 50%;
+    margin-bottom: 15px;
+    max-width: calc(85%);
+  }
+
+  h3 {
+    margin-bottom: 10px;
+  }
+
+}
+
+.about-col-2 {
+  width: -webkit-calc(65% - (#{$spacing-unit} / 4));
+  width:         calc(65% - (#{$spacing-unit} / 4));
+}
+
+@include media-query($on-palm) {
+  
+  .about-col {
+    padding: 0;
+    float: none;
+    width: auto;
+  }
+
+  .about-col-1 {
+    padding: 5%;
+    max-width: 200px;
+    margin: auto;
+    text-align: center;
+  }
+
+  ul {
+    margin: 0;
+  }
+
+  .user-picture {
+    max-width: 200px;
+  }
+
+}
+
+.no-version {
+  cursor: default;
+}
+
+.invisible {
+  display: none;
+}
+
  /**
   * Icons
   */
- .icon > svg {
-   display: inline-block;
-   vertical-align: middle;
- 
-   circle,
-   path:last-of-type {
-     fill: $grey-color;
-   }
- }
+  .icon > svg {
+    display: inline-block;
+    vertical-align: middle;
+  
+    circle,
+    path:last-of-type {
+      fill: $grey-color;
+    }
+  }
