--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,11 +3,11 @@
 ---
 @charset "utf-8";
 
-$base-font-family:  sans-serif;
-$base-font-size:   12pt;
+$base-font-family:  "KaTeX_SansSerif", sans-serif;
+$base-font-size:   13pt;
 $base-font-weight: 500;
 $small-font-size:  $base-font-size * 0.95;
-$base-line-height: 1.5;
+$base-line-height: 1.25;
 
 $spacing-unit:     50px;
 
