--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -81,7 +81,7 @@ a {
   margin-bottom: 20px;
 
   .page-link {
-    font-size: 10pt; 
+    font-size: 0.8 * $base-font-size; 
     margin-right: 10pt;
     color: $grey-color-light;
     &:hover {
