Change headers to smallcaps

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -18,7 +18,11 @@ figure {
 
 h1 { 
   font-size: 30pt; 
-  font-weight: 400
+  font-weight: 400;
+}
+
+h2 {
+  font-variant: small-caps;
 }
 
 p { 
