--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,5 +1,5 @@
 html {
-  background: #fffff8;
+  background: white; //#fffff8;
 }
 
 body, 
@@ -88,7 +88,6 @@ a {
     font-size: 0.8 * $base-font-size; 
     margin-right: 10pt;
     color: $grey-color-light;
-    font-variant: small-caps;
     &:hover {
         color: $grey-color;
         text-decoration: none;
